feat(management): 压缩测试